--- a/categories/Use any classifier (week 2).ipynb
+++ b/categories/Use any classifier (week 2).ipynb
@@ -83,6 +83,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[46175426, u'MLM1168', u'rebeld cd single lexmark * vrn', 99.9, u'MLM', u'buy_it_now', None, 1, u'MLM49743', u'MLM500783346', [u'MLM1168', u'MLM7809', u'MLM29249', u'MLM29251', u'MLM49743']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import shuffle\n",
+    "\n",
+    "shuffle(train)\n",
+    "print train[0].values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80000\n",
+      "20000\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_len = int(len(train)*0.8)\n",
+    "train_split = train[:train_len]\n",
+    "test_split = train[train_len:]\n",
+    "\n",
+    "print len(train_split)\n",
+    "print len(test_split)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -93,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -101,10 +148,10 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "y_train = pd.DataFrame(train)['top_level_category'].tolist()\n",
+    "y_train = pd.DataFrame(train_split)['top_level_category'].tolist()\n",
     "columns = [u'seller_id', u'price', u'sold_quantity']\n",
     "\n",
-    "X_train = pd.DataFrame(train).as_matrix(columns)"
+    "X_train = pd.DataFrame(train_split).as_matrix(columns)"
    ]
   },
   {
@@ -116,13 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "X_test = pd.DataFrame(test).as_matrix(columns)"
+    "#X_test = pd.DataFrame(test).as_matrix(columns)\n",
+    "X_test = pd.DataFrame(test_split).as_matrix(columns)\n",
+    "y_test = pd.DataFrame(test_split)['top_level_category'].tolist()"
    ]
   },
   {
@@ -134,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -148,7 +197,7 @@
        "            presort=False, random_state=None, splitter='best')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,13 +218,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MLM1747\n",
+      "MLM1747\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = classifier.predict(X_test)\n",
+    "print prediction[0]\n",
+    "print y_test[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "prediction = classifier.predict(X_test)"
+    "def calc_score(y_test, prediction):\n",
+    "    sames = 0.\n",
+    "    total = len(y_test)\n",
+    "    for y1, y2 in zip(y_test, prediction):\n",
+    "        if y1 == y2:\n",
+    "            sames += 1\n",
+    "    return sames/total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4764\n"
+     ]
+    }
+   ],
+   "source": [
+    "print calc_score(y_test, prediction)"
    ]
   },
   {
@@ -219,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -227,13 +323,13 @@
    "source": [
     "import requests\n",
     "\n",
-    "f = 'prediction.jsonlines'\n",
+    "f = 'dectree_pred.jsonlines'\n",
     "h = 'http://goedel:5000/categories'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -241,10 +337,10 @@
     {
      "data": {
       "text/plain": [
-       "'Accuracy is 26.95%'"
+       "'Accuracy is 48.07%'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
